vlib/v/checker/tests/struct_ref_field_no_ptr_err.vv
struct Foo {
	bar &Bar = Bar{}
}

struct Bar {
	field int
}
